fixed CSS inconsistencies between light/dark mode; added missing translations; began cleanup of create route page

--- a/ui/src/components/DrawableMap/DrawableMap.css
+++ b/ui/src/components/DrawableMap/DrawableMap.css
@@ -8,10 +8,12 @@
   }
   
   #map-container {
-    position: absolute;
-    height: 100vh;
-    width: 100%;
-
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70vw; /* 70% of the viewport width */
+    height: 70vh; /* 70% of the viewport height */
   }
   
   .controls-container {
